Archive title line-heigh fixed on iphone/ipad

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,6 +11,8 @@
 		margin-bottom: 20px;
 	}	
 	
+	#content > h1{line-height: 50px;}
+	
 	#sidebar .search #s{	width: 91.2%;}
 	
 }
@@ -26,7 +28,7 @@
 		border-bottom: 4px solid #bcbcbc;
 		margin-bottom: 20px;
 	}	
-
+	#content > h1{line-height: 50px;}
 	#sidebar .search #s{	width: 96.8%;}
 
 }
